# hev

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  batterySample.json  manualInstallation.md  pylint.cfg  readbackSample.json  requirements.txt  setup.sh  targetSample.json
NativeUI/: NativeUI.py  hev_alarms.py  hev_main.py  hev_modes.py  hev_settings.py  tab_measurements.py  tab_page_buttons.py  tab_plots.py  ui_layout.py  ui_widgets.py
NativeUI/alarm_widgets/: alarmPopup.py  alarm_handler.py  alarm_list.py  alarm_popup.py  alarm_table.py  tab_alarm_table.py  tab_alarms.py  tab_clinical.py
NativeUI/configs/: clinical_config.json  clinical_config_backup.json  colors.json  expert_config.json  mode_config.json  personal_config.json  startup_config.json  text_english.json  text_portuguese.json
NativeUI/main_widgets/: tab_plots.py  (+13 more)
ansible/: README.md  hev-ansible.sh
battery/: BatteryLLI.py  CommsCommon.py  batt_test.py  hevgpio.py
hev-display/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  hev-display.pro
hev-display/assets/: Cell.qml  Confirmation.qml  Double_Ctrl.qml  Input_Confirmation.qml  Input_Digits.qml  Input_Language.qml  Input_Mode.qml  LockArea.qml  Main_Ctrl.qml  Mode_Ctrl.qml  Notification.qml  Page_Alarms.qml  Page_Expert.qml  Page_Main.qml  Page_Settings.qml  PayloadDictionary.qml  Radio_Ctrl.qml  Settings_Ctrl.qml  Single_Ctrl.qml  Style.qml  Tab_Alarms.qml  Tab_Charts.qml  Tab_Ctrl.qml  Tab_Limits_Clinical.qml  Tab_Limits_Technical.qml  Tab_Main_Advanced.qml  Tab_Main_Basic.qml  Tab_Modes.qml  Tab_Personal.qml  Tab_Settings.qml  main.qml  qmldir  resources.qrc
hev-display/extras/cmake/: CPackConfig.cmake.in  CPackGit.cmake
hev-display/extras/systemd/: hev-display.service
hev-display/languages/: translation-qml_de.ts  translation-qml_en.ts  translation-qml_es.ts  translation-qml_fr.ts  translation-qml_it.ts  translation-qml_lv.ts  translation-qml_sk.ts  translations.qrc
hev-display/sources/: datasource.cpp  datasource.h  localization.cpp  localization.h  main.cpp
raspberry-backend/: README.md  TO_DO  app.py  arduino_recorder.py  arduino_recorder_V2.py  base.html  commsConstants.py  database_dump.py  dumpdata.py  hev.wsgi  logmsg.py
raspberry-dataserver/: ArduinoEmulator.py  BatteryLLI.py  ClientDebug.py  CommsCommon.py  CommsControl.py  CommsDebug.py  CommsDebug2.py  CommsDebugWithPlots.py  CommsFormat.py  CommsLLI.py  LabPlots.py  PID_debug_plots.py  README.md  commsConstants.py  commsControl.py  commsDebug.py  flow_plots.py  get_pid.py  hevclient.py  hevfromtxt.py  hevgpio.py  hevserver.py  hevtestdata.py  lazy_plots.py  set_pid.py  stop.py  svpi.py
samples/: alarmSample.json  batterySample.json  dataSample.json  readbackSample.json  targetSample.json
tests/: tests.md
utils/: ard_upgrade  enumcheck.sh  hev.rules  hevcheck.sh  hevserver-countfail  hevserver-daemon  hevserver.service  hyperjump  insert_header_cpp.sh  insert_header_py.sh  licence_header_cpp.txt  licence_header_py.txt  serial_over_ssh.sh  serialdump.py  structcheck.sh
(+190 files in other folders)
